<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    tools:context=".myProfile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginBottom="8dp"
        android:layout_weight="30"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/txt_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/prof" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginBottom="36dp"
        android:text="@string/txt_name"
        android:textAppearance="@style/name"
        app:layout_constraintBottom_toTopOf="@+id/txt_track"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_below="@+id/txt_name"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/marginTop"
        android:background="@color/text_black"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/txt_track"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        app:layout_constraintVertical_bias="1.0"
        app:layout_goneMarginEnd="@dimen/standard_margin"
        app:layout_goneMarginStart="@dimen/standard_margin" />


    <TextView
        android:id="@+id/txt_track"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_track"
        android:textAppearance="@style/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/txt_country"
        android:textAppearance="@style/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_track" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/txt_email"
        android:textAppearance="@style/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_country" />

    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/txt_phone"
        android:textAppearance="@style/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <TextView
        android:id="@+id/txt_slack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/txt_slack"
        android:textAppearance="@style/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone" />
</android.support.constraint.ConstraintLayout>